testdata/baselines/reference/compiler/fuzzRegressionSingleSlash.errors.txt
fuzzRegressionSingleSlash.ts(1,1): error TS1161: Unterminated regular expression literal.


==== fuzzRegressionSingleSlash.ts (1 errors) ====
    /
    ~
!!! error TS1161: Unterminated regular expression literal.
    